--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,29 @@
-<html>
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<title>app</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+	<link rel="stylesheet" href="styles/skeleton/base.css">
+	<link rel="stylesheet" href="styles/skeleton/skeleton.css">
+	<link rel="stylesheet" href="styles/skeleton/layout.css">
+	<link rel="stylesheet" href="styles/layout.css">
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+</head>
 <body>
-	<div id="app"></div>
+	<div id="app" class="container">
+	</div>
 	
 	<script type="text/javascript" src="scripts/libs/jquery.js"></script>
 	<script type="text/javascript" src="scripts/libs/underscore.js"></script>
